@@ -43,7 +43,7 @@ public class ShikakuSoshitsuIdoTotal {
     private static final RString SHISETSU = new RString("施設入退所");
     private static final RString SHORUIJOKYO = new RString("証交付回収");
     private static final RString 修正 = new RString("修正");
-    private static final Integer FIRSTINDEX = new Integer(0);
+    private static final Integer FIRSTINDEX = Integer.valueOf("0");
 
     /**
      * 資格喪失異動の初期化します。
@@ -93,7 +93,6 @@ public class ShikakuSoshitsuIdoTotal {
      * @return レスポンス
      */
     public ResponseData<ShikakuSoshitsuIdoTotalDiv> onClick_btnUpdate(ShikakuSoshitsuIdoTotalDiv div) {
-        ResponseData<ShikakuSoshitsuIdoTotalDiv> response = new ResponseData<>();
         if (!ResponseHolder.isReRequest()) {
             QuestionMessage message = new QuestionMessage(UrQuestionMessages.処理実行の確認.getMessage().getCode(),
                     UrQuestionMessages.処理実行の確認.getMessage().evaluate());
@@ -106,8 +105,7 @@ public class ShikakuSoshitsuIdoTotal {
             div.getComplete().getCcdKaigoKanryoMessage().setSuccessMessage(new RString(UrInformationMessages.保存終了.getMessage().evaluate()));
             return ResponseData.of(div).setState(DBA1030011StateName.完了状態);
         }
-        response.data = div;
-        return response;
+        return ResponseData.of(div).respond();
     }
 
     /**
